syntax = "proto3";

package go.micro.srv.PutOrders;

service Example {
	rpc PutOrders(Request) returns (Response) {}
}

message Message {
	string say = 1;
}

message Request {
	string SessionId = 1;
    string OrderId = 2;
    string Action = 3;
}

message Response {
	string Error = 1;
    string Errmsg = 2;
}

message StreamingRequest {
	int64 count = 1;
}

message StreamingResponse {
	int64 count = 1;
}

message Ping {
	int64 stroke = 1;
}

message Pong {
	int64 stroke = 1;
}
